tests/errors/test_40.x
// Unknown type

fn main() -> i64 {

    let x: WHAT;

}